@@ -1,50 +1,102 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>fun.learning</groupId>
-  <artifactId>ATM_Example_3</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>ATM Example 3</name>
-    <dependencies>
-  	<dependency>
-  		<groupId>info.cukes</groupId>
-  		<artifactId>cucumber-junit</artifactId>
-  		<version>1.2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>info.cukes</groupId>
-  		<artifactId>cucumber-java</artifactId>
-  		<version>1.2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>info.cukes</groupId>
-  		<artifactId>cucumber-core</artifactId>
-  		<version>1.2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>info.cukes</groupId>
-  		<artifactId>cucumber-picocontainer</artifactId>
-  		<version>1.2.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>info.cukes</groupId>
-  		<artifactId>gherkin</artifactId>
-  		<version>2.12.2</version>
-  	</dependency>
-  	<dependency>
-    	<groupId>org.eclipse.jetty</groupId>
-    	<artifactId>jetty-webapp</artifactId>
-    	<version>9.4.14.v20181114</version>
-	</dependency>
-	<dependency>
-    	<groupId>org.seleniumhq.selenium</groupId>
-    	<artifactId>selenium-server</artifactId>
-    	<version>3.141.59</version>
-	</dependency>
-	<dependency>
-    	<groupId>commons-io</groupId>
-    	<artifactId>commons-io</artifactId>
-    	<version>2.6</version>
-</dependency>
-	
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fun.learning</groupId>
+	<artifactId>ATM_Example_3</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>ATM Example 3</name>
+	<dependencies>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-core</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>gherkin</artifactId>
+			<version>2.12.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>9.4.14.v20181114</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>3.141.59</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.12.2</version>
+					<configuration>
+						<argLine>-Duser.language=en</argLine>
+						<argLine>-Xmx1024m</argLine>
+						<argLine>-XX:MaxPermSize=256m</argLine>
+						<argLine>-Dfile.encoding=UTF-8</argLine>
+						<useFile>false</useFile>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.javalite</groupId>
+					<artifactId>activejdbc-instrumentation</artifactId>
+					<version>1.4.1</version>
+					<executions>
+						<execution>
+							<phase>process-classes</phase>
+							<goals>
+								<goal>instrument</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.liquibase</groupId>
+					<artifactId>liquibase-maven-plugin</artifactId>
+					<version>3.6.3</version>
+					<configuration>
+						<changeLogFile>src/main/resources/bank_schema.xml</changeLogFile>
+						<driver>com.mysql.jdbc.Driver</driver>
+						<url>jdbc:mysql://localhost/bank</url>
+						<username>teller</username>
+						<password>password</password>
+					</configuration>
+					<executions>
+						<execution>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>update</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
